--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: yogiroc
-Title: What the Package Does (one line, title case)
-Version: 0.2.0.9000
+Title: Draw ROC and PRC curves
+Version: 0.2.1.9000
 Authors@R: 'Jochen Weile <jochenweile@gmail.com> [aut,cre]'
-Description: What the package does (one paragraph).
+Description: Draw ROC and PRC curves, calculate AUC, confidence intervals and p-values.
 Depends: R (>= 3.4.4)
 License: GPL-3
 Encoding: UTF-8
