--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,9 @@
 Package: yogiroc
 Title: Draw ROC and PRC curves
 Version: 0.2.5.9000
-Authors@R: 'Jochen Weile <jochenweile@gmail.com> [aut,cre]'
+Authors@R: c(
+    person("Jochen", "Weile", email = "jochenweile@gmail.com", role = c("cre","aut")),
+    person("Yingzhou", "Wu", email = "joe.wu.ca@gmail.com", role = "ctb"))
 Description: Draw ROC and PRC curves, calculate AUC, confidence intervals and p-values.
 Depends: R (>= 3.4.4)
 License: GPL-3
@@ -9,4 +11,4 @@ Encoding: UTF-8
 LazyData: true
 Suggests: 
     testthat
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.1
